--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"dotenv": "^17.2.3",
 		"ejs": "^3.1.10",
 		"express": "^5.1.0",
+		"mongodb": "^7.0.0",
 		"pg": "^8.16.3"
 	},
 	"devDependencies": {
